assets/css/style.css
* {
  margin: 0;
  padding: 0;
  font-family: "Montserrat", sans-serif;
  box-sizing: border-box;
  transition: all 0.4s;
}

/*****************Text Format*****************/
.txt_center {
  text-align: center;
}

.index_nav_txt {
  color: white;
}

body {
  font-size: 12px;
}

.centered {
    margin-right: auto;
    margin-left: auto;
    text-align: center;
}

/*****************Logo on left div in index page*****************/
.logo_index {
  display: block;
  margin-right: auto;
  margin-left: auto;
  margin-top: 40px;
  height: 110px;
  width: 93px;
}

.div_ind_1 {
    height: 100vh;
}

.div_ind_2 {
    background-color: black;
}

/** ***************"Portfolio, Blog" links on Index Page*****************/
#pge_link_container ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
  text-align: center;
}

.border {
  display: inline-block;
  border: 2px solid white;
  padding: 15px 19.5px 15px 21.6px;
  margin-top: 40px;
  margin-right: 10px;
  text-transform: uppercase;
  letter-spacing: 0.11em;
  font-weight: 400;
  
}



/*****************Index Page social Icons*****************/
#soccontainer {
  display: block;
  margin-top: 150px;
}
#soccontainer ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
  text-align: center;
}

#soccontainer ul li {
  display: inline;
  padding: 5px;
}

#soccontainer ul li a {
  text-decoration: none;
  padding-bottom: 4px;
  color: #fff;
}

#soccontainer ul li a:hover {
  color: #fff;
  background-color:  #ffffff00
}

/*****************Index Header*****************/
#index_header {
  font-size: 55px;
  font-family: Helvetica;
  margin-top: 40px;
  display: block;
}

/***************Info Text*************/
#info_txt {
  margin-top: 40px;
  font-size: 21px;
  display: block;
  margin-block-start: 1em;
  margin-block-end: 1em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
  text-align: center;
}

.lt_col {
  background-image: url("../images/mountain.jpg");
  height: 100vh;
  background-repeat: no-repeat;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  display: flex;
  align-items: center;
  justify-content: center;
}

/*****************Gallery Page*****************/

/**********  Gallery Navbar section ***********/

.nav li a {
  font-size: 17px;
  font-weight: 200px;
  color: white ;
  text-align: center !important;
}

.nav{
    width: 100%;
    height: 65px;
    position: fixed;
    line-height: 65px;
    text-align: center;
    background-color:black;
    z-index: 99999;
    
}

.nav div.logo{
    position: absolute;
    
}

.nav div.logo a{
    text-decoration: none;
    color:#fff;
    font-size: 1.8em;
    text-transform: uppercase;
    
}

.nav div.logo a:hover {
    color: #c0c0c0;
    
}

.nav div.main_list{
    width: 600px;
    height: 65px;
    margin-right: auto;
    margin-left: auto ;
    display: block;
}

.nav div.main_list ul{
    width:100%;
    height: 65px;
    display: flex;
    list-style: none;
}

.nav div.main_list ul li{
    width: 120px;
    height: 65px;
}



.nav div.main_list ul li a{
    text-decoration: none;
    color:white;
    line-height: 65px;
    text-transform: uppercase;
}

.nav div.main_list ul li a:hover{
    color: #c0c0c0;
}

.nav div.media_button {
    width: 40px;
    height: 40px;
    background-color: transparent;
    position: absolute;
    right: 15px;
    top: 12px;
    display: none;
}

.nav div.media_button button.main_media_button {
    width: 100%;
    height: 100%;
    background-color: transparent;;
    outline: 0;
    border: none;
    cursor: pointer;
}

.nav div.media_button button.main_media_button span{
    width: 98%;
    height: 1px;
    display: block;
    background-color: white;
    margin-top: 9px;
    margin-bottom: 10px;
}

.nav div.media_button button.main_media_button:hover span:nth-of-type(1){
    transform: rotateY(180deg);
    transition: all 0.5s;
    background-color: #c0c0c0;
}

.nav div.media_button button.main_media_button:hover span:nth-of-type(2){
    transform: rotateY(180deg);
    transition: all 0.4s;
    background-color: #c0c0c0;
}

.nav div.media_button button.main_media_button:hover span:nth-of-type(3){
    transform: rotateY(180deg);
    transition: all 0.3s;
    background-color: #c0c0c0;
}

.nav div.media_button button.active span:nth-of-type(1) {
    transform: rotate3d(0, 0, 1, 45deg);
    position: absolute;
    margin: 0;
}

.nav div.media_button button.active span:nth-of-type(2) {
    display: none;
}

.nav div.media_button button.active span:nth-of-type(3) {
    transform: rotate3d(0, 0, 1, -45deg);
    position: absolute;
    margin: 0;
}

.nav div.media_button button.active:hover span:nth-of-type(1) {
    transform: rotate3d(0, 0, 1, 20deg);
}

.nav div.media_button button.active:hover span:nth-of-type(3) {
    transform: rotate3d(0, 0, 1, -20deg);
}

/*********Header****************/
 .callout-container {
     height: 750px;
     background: url("../images/header_blue.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
}
 .opaque-overlay {
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.5);
}
 .jumbotron {
     background-color: transparent;
}
 .jumbotron h1 {
     color: white;
     font-weight: bold;
     margin-bottom: 30px;
     text-decoration: none;
     font-size: 60px;
     margin-top: 150px;
     font-family: 'Dosis';
}
 .jumbotron .lead {
     color: white;
     margin: 25px 0;
     font-size: 20px;
}
/* ***************Callout Button ****************/
 .btn {
     height: 45px; 
     width: 250px;
     margin-top: 20px;
     border: 2px solid white;
     
}

.btn_txt{
    font-size: 20px;
    color: white;
}


 .button_anchor {
     color: white;
     
}
/* ... */

